<resources>
    <string name="app_name">StopWatch</string>
    <string name="settings_screen_title">Settings</string>

    <string name="btn1_page1_text">LAP</string>
    <string name="btn2_page1_text">LAP RECORD</string>
    <string name="btn3_text">RESET</string>
    <string name="btn1_page2_text">SET</string>
    <string name="btn2_page2_text">TIMER PRESET</string>

    <string name="central_btn_tap">TAP</string>
    <string name="central_btn_swing">SWING</string>
    <string name="central_btn_clap">CLAP</string>
    <string name="central_btn_prox">WAVE</string>
    <string name="central_btn_vol_up">VOL +</string>
    <string name="central_btn_vol_dn">VOL -</string>

    <string name="central_btn_start">to start</string>
    <string name="central_btn_stop">to stop</string>
    <string name="time_default_stopwatch">00:00:00:000</string>
    <string name="time_default_timer">00:00:00</string>

    <string name="totalTimeBtn">TOTAL TIME</string>
    <string name="lapTimeBtn">LAP TIME</string>

    <string name="setTimerDialog">Set Timer</string>
    <string name="setTimer_hours">Hours</string>
    <string name="setTimer_min">Minutes</string>
    <string name="setTimer_sec">Seconds</string>

    <string name="timer_preset_view">TIMERS</string>
    <string name="timer_add">ADD</string>

    <!-- Preferences keys -->
    <string name="KEY_SOUND">key_pref_sound</string>
    <string name="KEY_RINGTONE_URI">key_pref_uri</string>
    <string name="KEY_RINGTONE_TITLE">key_pref_title</string>
    <string name="KEY_START_STOP">key_pref_start_stop_mode</string>
    <string name="KEY_LAP">key_pref_lap</string>
    <string name="KEY_TOUCHBTN">key_pref_touchBtn</string>
    <string name="KEY_SCREEN">key_pref_screen_on</string>
    <string name="KEY_NIGHT">key_pref_night_mode</string>
    <string name="KEY_SMILE">key_pref_smile</string>
    <string name="KEY_ASK_FOR_RATE">askForRate</string>
    <string name="KEY_FIRST_USE">firstUse</string>

    <!-- Possible values for preferences -->
    <string name="sound_only">Sound</string>
    <string name="vibrate_only">Vibrate</string>
    <string name="soundAndVibrate">soundAndVibrate</string>
    <string name="none">None</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dedicated_button">Button only</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="clap_sound">Clap sound</string>
    <string name="swing_motion">Swing Motion</string>
    <string name="proximity_sensor">Proximity sensor</string>
    <string name="clap_warning">Note: works best in quiet environments</string>

    <!-- Default values for preferences -->
    <!-- I tried to use aliases @string/already_defined_string
    but for some reason won't be correctly resolved in the code..... -->
    <string name="KEY_START_STOP_LAP_DEFAULT">Button only</string>
    <string name="KEY_SOUND_DEFAULT">Sound</string>
    <string name="KEY_RINGTONE_URI_DEFAULT">None</string>
    <string name="KEY_TOUCHBTN_DEFAULT">Vibrate</string>
    <string name="KEY_NIGHT_DEFAULT">No</string>
    <string name="KEY_SCREEN_DEFAULT">No</string>

</resources>
