<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/setTimerDialog"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setTimer_hours"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/numberPicker_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@android:style/Theme.Holo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setTimer_min"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/numberPicker_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setTimer_sec"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/numberPicker_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>