<?xml version="1.0" encoding="utf-8"?>
<!--Child views are drawn in a stack, with the most recently added child on top -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@color/background_color"
                tools:context="watch.stopwatch.MainActivity">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/adPlaceholder">
        </FrameLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@+id/adPlaceholder"
            android:layout_above="@+id/page_selector"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/container"
            android:layout_alignEnd="@id/container"
            android:layout_marginBottom="360dp"
            android:src="@drawable/ic_settings" />

        <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:text="@string/btn1_page1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/button_state_selector"
                android:onClick="btn1Click"
                />

            <Button
                android:text="@string/btn2_page1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorPrimaryLight"
                android:foreground="@drawable/button_state_selector"
                android:onClick="btn2Click"/>

            <Button
                android:text="@string/btn3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorPrimary"
                android:onClick="btn3Click"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/page_selector"
            android:layout_above="@+id/buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:id="@+id/page1"
                android:layout_weight="1"
                android:checked="true"
                style="@style/RadioButtonStyle"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="@dimen/dot"
                android:layout_height="@dimen/dot" />

            <RadioButton
                android:id="@+id/page2"
                android:layout_weight="1"
                style="@style/RadioButtonStyle"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="@dimen/dot"
                android:layout_width="@dimen/dot"/>

            <RadioButton
                android:layout_height="@dimen/dot"
                android:layout_width="@dimen/dot"
                android:id="@+id/page3"
                android:layout_weight="1"
                style="@style/RadioButtonStyle"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp" />

        </RadioGroup>
    </RelativeLayout>

    <!-- secondary layout for popup views -->
    <RelativeLayout
        android:id="@+id/secondary_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</FrameLayout>
