<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/addTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clockLayout"
        android:layout_gravity="bottom"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/addMinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:onClick="addMin"
                android:src="@drawable/add_min_btn_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="+1"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/addSecBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:onClick="addSec"
                android:src="@drawable/add_sec_btn_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text="+1"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clockLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/tick_list"/>

        <ImageView
            android:id="@+id/needle_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/needle_list"/>

        <ImageView
            android:id="@+id/bigBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/center"
            android:onClick="btnCenter"/>

        <!-- Intermediate layout needed for alignment -->
        <FrameLayout
            android:layout_width="170dp"
            android:layout_height="165dp"
            android:layout_centerInParent="true">

            <watch.stopwatch.CircleFillView
            android:id="@+id/circleFillView"
            android:layout_width="@dimen/center_dimension"
            android:layout_height="@dimen/center_dimension"
            android:layout_gravity="center_horizontal"
            android:rotation="180"
            custom:fillColor="@color/colorAccent"
            custom:strokeColor="@color/transparent"
            custom:strokeWidth="0"
            custom:value="0"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_text_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/central_btn_tap"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/btn_text_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/central_btn_start"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="24sp"/>

        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clockLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/time_default_stopwatch"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>